kubernetes/security/monitor-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: monitor-allow-policy
  namespace: prod 
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["monitoring"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-prod
  namespace: monitoring 
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["prod"]
